--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<footer>
 		<p>
 			Cet outil est mis à votre disposition par
-			<a href="https://hyakosm.net">hyakosm.net</a>
+			<a href="https://maya.sh">Maya</a> 🌸
 		</p>
 	</footer>
 
